<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".EditContactFragment">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/start_guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="16dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/end_guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_end="16dp" />

    <TextView
        android:id="@+id/titleTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:fontFamily="sans-serif-medium"
        android:textColor="@color/secondaryColor"
        android:text="@string/new_contact_title"
        android:textAppearance="@style/TextAppearance.AppCompat.Display1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/first_name_text_input"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        app:layout_constrainedWidth="true"
        app:layout_constraintEnd_toEndOf="@+id/end_guideline"
        app:layout_constraintStart_toStartOf="@+id/start_guideline"
        app:layout_constraintTop_toBottomOf="@id/titleTextView">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/first_name_edit_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:maxLines="1"
            android:hint="@string/first_name_edit_text_hint" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/last_name_text_input"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        app:layout_constrainedWidth="true"
        app:layout_constraintStart_toStartOf="@id/start_guideline"
        app:layout_constraintEnd_toEndOf="@id/end_guideline"
        app:layout_constraintTop_toBottomOf="@id/first_name_text_input">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/last_name_edit_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:maxLines="1"
            android:hint="@string/last_name_edit_text_hint" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/phone_text_input"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        app:layout_constrainedWidth="true"
        app:layout_constraintStart_toStartOf="@id/start_guideline"
        app:layout_constraintEnd_toEndOf="@id/end_guideline"
        app:layout_constraintTop_toBottomOf="@id/last_name_text_input">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/phone_edit_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="phone"
            android:maxLines="1"
            android:hint="@string/mobile_edit_text_hint" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/email_text_input"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        app:layout_constrainedWidth="true"
        app:layout_constraintStart_toStartOf="@id/start_guideline"
        app:layout_constraintEnd_toEndOf="@id/end_guideline"
        app:layout_constraintTop_toBottomOf="@id/phone_text_input">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/email_edit_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress"
            android:maxLines="1"
            android:hint="@string/e_mail_edit_text_hint" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/city_text_input"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        app:layout_constrainedWidth="true"
        app:layout_constraintStart_toStartOf="@id/start_guideline"
        app:layout_constraintEnd_toEndOf="@id/end_guideline"
        app:layout_constraintTop_toBottomOf="@id/address_text_input">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/city_edit_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPostalAddress"
            android:maxLines="1"
            android:hint="@string/city_edit_text_hint" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/address_text_input"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        app:layout_constrainedWidth="true"
        app:layout_constraintStart_toStartOf="@id/start_guideline"
        app:layout_constraintEnd_toEndOf="@id/end_guideline"
        app:layout_constraintTop_toBottomOf="@id/email_text_input">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/address_edit_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPostalAddress"
            android:maxLines="1"
            android:hint="@string/address_edit_text_hint" />
    </com.google.android.material.textfield.TextInputLayout>


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/zip_text_input"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        app:layout_constrainedWidth="true"
        app:layout_constraintStart_toStartOf="@id/start_guideline"
        app:layout_constraintEnd_toEndOf="@id/end_guideline"
        app:layout_constraintTop_toBottomOf="@id/city_text_input">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/zip_edit_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:maxLines="1"
            android:hint="@string/zip_code_edit_text_hint" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/submit_contact_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/create_edit_text_hint"
        app:layout_constraintStart_toStartOf="@+id/start_guideline"
        app:layout_constraintTop_toBottomOf="@+id/zip_text_input" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/delete_contact_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginStart="16dp"
        android:visibility="gone"
        tools:visibility="visible"
        android:backgroundTint="@color/primaryLightColor"
        android:text="@string/delete_edit_text_hint"
        app:layout_constraintStart_toEndOf="@+id/submit_contact_button"
        app:layout_constraintTop_toBottomOf="@+id/zip_text_input" />

</androidx.constraintlayout.widget.ConstraintLayout>